# ESP2_MESSAGE_DISPLAY

./: .gitignore  README.md
board/: ESP32_MESSAGE_DISPLAY.bak  ESP32_MESSAGE_DISPLAY.kicad_pcb-bak  ESP32_MESSAGE_DISPLAY.net  ESP32_MESSAGE_DISPLAY.pro  ESP32_MESSAGE_DISPLAY.sch  fp-info-cache  fp-lib-table
board/EXPORTS/bom/: bom.xlsx  ibom.html
board/EXPORTS/gerber/: ESP32_MESSAGE_DISPLAY-B_Cu.gbr  ESP32_MESSAGE_DISPLAY-B_Mask.gbr  ESP32_MESSAGE_DISPLAY-B_Paste.gbr  ESP32_MESSAGE_DISPLAY-B_SilkS.gbr  ESP32_MESSAGE_DISPLAY-Edge_Cuts.gbr  ESP32_MESSAGE_DISPLAY-F_Cu.gbr  ESP32_MESSAGE_DISPLAY-F_Mask.gbr  ESP32_MESSAGE_DISPLAY-F_Paste.gbr  ESP32_MESSAGE_DISPLAY-F_SilkS.gbr  ESP32_MESSAGE_DISPLAY.drl
board/lib_fb.pretty/: nomadic_controls_10mm.kicad_mod  nomadic_controls_6mm.kicad_mod
src/: CMakeLists.txt  clean_compile.sh  compile.sh  erase_flash.sh  flash.sh  partition_table_update.sh  partitions.csv  sdkconfig  sdkconfig.old
src/components/bsp/: CMakeLists.txt  bsp.h
src/components/global/: CMakeLists.txt  global.c
src/components/global/include/: global.h
src/components/internal/internal_flash/: CMakeLists.txt  internal_flash.c
src/components/internal/internal_flash/include/: internal_flash.h
src/components/internal/internal_mdns/: CMakeLists.txt  internal_mdns.c
src/components/internal/internal_mdns/include/: internal_mdns.h
src/components/internal/internal_spiffs/: CMakeLists.txt  internal_spiffs.c
src/components/internal/internal_spiffs/include/: internal_spiffs.h
src/components/internal/internal_time/: CMakeLists.txt  internal_time.c
src/components/internal/internal_time/include/: internal_time.h
src/components/internal/internal_webserver/: CMakeLists.txt  internal_webserver.c
src/components/internal/internal_webserver/include/: internal_webserver.h
src/components/internal/internal_wifi/: CMakeLists.txt  internal_wifi.c
src/components/internal/internal_wifi/include/: internal_wifi.h
src/components/util/ESP32_UTIL/: CMakeLists.txt  ESP32_UTIL.c
src/components/util/ESP32_UTIL/include/: ESP32_UTIL.h
src/main/: CMakeLists.txt  default_provisioning.h  main.c  project_info.h
src/media/: blank.html
